--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,28 @@
+@use 'hero';
+@use 'components/infos_bar';
+@use 'components/buttons';
+@use 'event';
+@use 'variables';
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Mukta Mahee', sans-serif;
+    color: variables.$textColor;
+    list-style: none;
 }
 
-header {
-    background-color: rgb(43, 255, 0);
+.container {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+
+    @media (max-width: 640px) {
+        max-width: 80%;
+    }
+
+    @media (max-width: 1024px) {
+        max-width: 90%;
+    } 
 }
