--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -69,6 +69,11 @@
         &__details {
             margin-right: 0;
             margin-bottom: 16px;
+
+            img {
+                max-width: 100%;
+            }
+
         }
     }
 }
